# tiny-llm

./: .gitignore  .last_evaluated_checkpoint  Cargo.toml  README.md  architecture.mmd  build.rs  config.json  dump_sqlite.py  parse_trace.py  prep_data.py  test_custom_add.rs  test_rmsnorm.rs
.agent/skills/auto_optimizer/: SKILL.md
.agent/skills/auto_optimizer/scripts/: compute_gpu_limit  compute_gpu_limit.cu  run_loop.sh
.agent/skills/evaluation/: SKILL.md
.agent/skills/evaluation/scripts/: run_eval.sh
.agent/skills/generation/: SKILL.md
.agent/skills/generation/scripts/: test_generation.sh
.agent/skills/linting/: SKILL.md
.agent/skills/linting/scripts/: run_lint.sh
.agent/skills/plot_loss/: SKILL.md
.agent/skills/plot_loss/scripts/: plot.py
.agent/skills/pre_commit/: SKILL.md
.agent/skills/profiling/: SKILL.md
.agent/skills/profiling/scripts/: nsys_analyze.sh  nsys_profile.sh
.agent/skills/remote_evaluation/: SKILL.md
.agent/skills/remote_evaluation/scripts/: run_remote_eval.sh
scripts/: benchmark_on_gcp.sh  profile_on_gcp.sh  tokenize_on_gcp.sh  train_on_gcp.sh  upload_after_prep.sh
src/: adamw.cu  attention.rs  block.rs  config.rs  cross_entropy.cu  fused_adamw.rs  fused_add.rs  fused_cross_entropy.rs  fused_rope.rs  lib.rs  model.rs  rms_norm.rs  rmsnorm.rs  rope.cu  var_builder_helpers.rs
src/kernel/: adamw.cu  fused_adamw.rs  fused_cross_entropy.rs  fused_rope.rs  mod.rs
