[package]
name = "tiny_llm"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.9.0", features = ["cuda"] }
candle-nn = { version = "0.9.0", features = ["cuda"] }
candle-flash-attn = { version = "0.9.0" }
tokenizers = "0.19"
anyhow = "1.0"
rand = "0.8"
memmap2 = "0.9"
bytemuck = "1.15"
half = "2.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"

[[bin]]
name = "eval"
path = "src/bin/eval.rs"

[build-dependencies]
cc = "1.2.56"
