[package]
name = "tiny_llm"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.9.2", features = ["cuda"] }
candle-nn = { version = "0.9.2", features = ["cuda"] }
candle-flash-attn = { version = "0.9.2" }
tokenizers = "0.19"
hf-hub = { version = "0.3.2", features = ["tokio"] }
anyhow = "1.0"
rand = "0.8"
memmap2 = "0.9"
bytemuck = "1.15"
half = "2.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
sysinfo = "0.38.3"
cudarc = "0.19.3"
nvml-wrapper = "0.12.0"
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
parquet = "58.0.0"
rayon = "1.11.0"
tokio-stream = "0.1.18"
futures = "0.3.32"
bytes = "1.11.1"
indicatif = "0.18.4"

[[bin]]
name = "train"
path = "src/bin/train.rs"


[[bin]]
name = "generate"
path = "src/bin/generate.rs"

[[bin]]
name = "eval"
path = "src/bin/eval.rs"

[[bin]]
name = "prep_data"
path = "src/bin/prep_data.rs"

[build-dependencies]
cc = "1.2.56"
